--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         // body.style.height = document.body.clientHeight;
         // document.getElementsByTagName('html')[0].style.fontSize = (window.screen.width / 750 * 100) + '%';
     </script>
-    <script src='/deploy/index.js'></script>
+    <script src='/deploy/entry.js'></script>
 </body>
 </html>
